# NEAR-pool

./: .gitignore  Cargo.toml  LICENSE  README.md  verification_key.txt
pool-contract/: .gitignore  Cargo.toml  README.md  package.json
pool-contract/src/: lib.rs  verifier.rs
pool-crypto/: Cargo.toml
pool-crypto/src/: constants.rs  lib.rs  main.rs
pool-crypto/src/circuit/: transfer.rs  tx.rs
pool-crypto/src/native/: data.rs  gen_test_data.rs  mod.rs  transfer.rs  tx.rs
pool-wasm-client/: Cargo.toml
pool-wasm-client/src/: client.rs  database.rs  lib.rs  random.rs
pool-wasm-client/tests/: web.rs
