[package]
name = "near-groth16-verifier"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
borsh = "0.7.0"
#near-sdk = "0.10.0"
near-sdk = { version = "1.0.0", path = "../../near-sdk-rs/near-sdk"}
wee_alloc = { version = "0.4.5", default-features = false, features = [] }
ff-uint = {git = "https://github.com/zeropoolnetwork/ff-uint"}


[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for fast computations.
opt-level = "z"
lto = true
debug = false
panic = "abort"

