[package]
name = "pool-circuit"
version = "0.1.0"
authors = ["Igor Gulamov <igor.gulamov@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[[bin]]
path = "src/main.rs"
name = "pool-prover"

[dependencies]
fawkes-crypto = {path = "../../fawkes-crypto"}
fawkes-crypto_derive = {path = "../../fawkes-crypto/fawkes-crypto_derive"}
num = "0.2.1"
num-traits = "0.2.12"
rand = "=0.4"
typenum = "=1.12.0"
async-trait = "0.1.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"

[dependencies.ff]
version = "=0.7"
features = ["derive"]
package = "ff_ce"

[dependencies.bellman]
version = "=0.3.1"
package = "bellman_ce"
default-features = false

[dependencies.clap]
version = "3.0.0-beta.1"
package = "clap-v3"

[dependencies.pairing]
version = "=0.18"
package = "pairing_ce"