[package]
name = "pool-circuit"
version = "0.1.0"
authors = ["Igor Gulamov <igor.gulamov@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[[bin]]
path = "src/main.rs"
name = "pool-prover"

[dependencies]
fawkes-crypto = { path = "../../fawkes-crypto" }
fawkes-crypto_derive = "0.1.2"
num = {version = "0.2.1", features = ["serde"] }


rand = "=0.4"
typenum = "=1.12.0"
async-trait = "0.1.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
sha3 = "0.9.1"
dotenv = "0.10.1"
base64 = "0.12.3"
kvdb-memorydb = "0.7.0"
kvdb = "0.7.0"

[dependencies.ff]
version = "=0.7"
features = ["derive"]
package = "ff_ce"

[dependencies.bellman]
version = "=0.3.1"
package = "bellman_ce"
default-features = false

[dependencies.clap]
version = "3.0.0-beta.1"
package = "clap-v3"

[dependencies.pairing]
version = "=0.18"
package = "pairing_ce"